# FunTask

./: FunTask.cabal  LICENSE  README.md  README.org  stack.yaml
bash/: compound-command.sh  subshell.sh
src/: Ast.hs  Interp.hs  Main.hs  Parser.hs
src/Interp/: Impl.hs
src/Parser/: Impl.hs  Tests.hs
