name:                FunTask
version:             0.1.0.0
synopsis:            Functional Programming with Tasks
description:         Please see README.md
homepage:            https://github.com/oleks/FunTask#readme
license:             BSD3
license-file:        LICENSE
author:              Oleks
maintainer:          oleks@oleks.info
copyright:           2016 Oleks
category:            Shell
build-type:          Simple
cabal-version:       >=1.10

executable FunTask
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskeline >= 0.7.2.3
                     , transformers >= 0.5.2.0
                     , process >= 1.4.2.0
  other-modules:      Ast
                    , Interp
                    , Interp.Impl
                    , Parser
                    , Parser.Impl
